--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Werkzeug==0.16.0
-tensorflow==2.4.2
-numpy==1.19.5
-Flask==1.1.1
-Pillow==8.3.1
+Werkzeug==0.14.1
+tensorflow==2.0.0a0
+numpy==1.16.2
+Flask==1.0.2
+Pillow==7.0.0
 gunicorn>19.9.0
