--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-python==3.7.2
+tensorflow==2.0.0a0
 Werkzeug==0.14.1
-tensorflow==2.5.0rc0
-numpy==1.16.2
 Flask==1.0.2
+numpy==1.16.2
 Pillow==7.0.0
 gunicorn>19.9.0
 
